<resources>
    <string name="app_name">kon</string>
    <string name="search">搜索</string>
    <string name="empty_str" />

    <string name="local_music">本地音乐</string>
    <string name="my_favorite_music">我喜欢的音乐</string>
    <string name="recently_played">最近播放</string>
    <string name="download_manage">下载管理</string>
    <string name="my_radio_station">我的电台</string>
    <string name="my_collection">我的收藏</string>
    <string name="item_count">(%d)</string>

    <string name="scan_local_music">扫描本地音乐</string>
    <string name="scan_music">扫描音乐</string>
    <string name="select_sort_way">选择排序方式</string>
    <string name="get_cover_lyrics">获取封面歌词</string>
    <string name="improve_tone_quality">升级音质</string>
    <string name="play_all">播放全部</string>
    <string name="local_music_count">(共%d首)</string>
    <string name="multiple_choice">多选</string>
    <string name="mode_single_loop">单曲循环</string>
    <string name="mode_loop">列表循环</string>
    <string name="mode_random">随机播放</string>
    <string name="collect_all">收藏全部</string>
    <string name="deep_sea_girl">深海少女</string>
    <string name="luo"> - 洛天依</string>
    <string name="playlist_title_artist_sep">&#160;-&#160;</string>
    <string name="play_mode_show">%s&#160;&#160;(%d)</string>

    <!-- CommonDialogFragment -->
    <string name="cdf_dialog_title_single">歌曲:&#160;&#160;%s</string>
    <string name="cdf_dialog_title_ml">歌单:&#160;&#160;%s</string>
    <string name="cdf_dialog_title_artist">歌手:&#160;&#160;%s</string>
    <string name="cdf_dialog_title_album">专辑:&#160;&#160;%s</string>
    <string name="cdf_dialog_title_dir">文件夹:&#160;&#160;%s</string>
    <string name="cdf_play_next">下一首播放</string>
    <string name="cdf_collect">收藏到歌单</string>
    <string name="cdf_share">上传到云盘</string>
    <string name="cdf_artist">歌手：%s</string>
    <string name="cdf_album">专辑：%s</string>
    <string name="cdf_delete">删除</string>
    <string name="cdf_edit_ml">编辑歌单信息</string>
    <string name="delete">删除</string>

    <string name="artist">歌手</string>
    <string name="album">专辑</string>
    <string name="dir">文件夹</string>
    <string name="music_title">歌名</string>
    <string name="cancel">取消</string>
    <string name="determine">确定</string>
    <string name="sure_to_clear_playlist">确定要清空播放列表?</string>
    <string name="clear">清空</string>
    <string name="scan_full">全盘扫描</string>
    <string name="scan_custom">自定义扫描</string>
    <string name="scanning">正在扫描…</string>
    <string name="scan_cancel">取消扫描</string>
    <string name="scan_result_count">共扫描到&lt;span style=\"color: red\"&gt;%d首&lt;/span&gt;歌曲</string>
    <string name="back_to_my_music">回到我的音乐</string>
    <string name="get_lyric">一键获取封面歌词</string>
    <string name="artist_album">%s - %s</string>
    <string name="QUALITY_IMPROVE">音质升级</string>
    <string name="added_to_next_play">已添加到下一首播放</string>
    <string name="deleted">已删除</string>

    <string name="lilma_music_count">%d首</string>
    <string name="lilmal_music_count">%d首&#160;%s</string>

    <string name="artist_unknown">群星</string>
    <string name="unknown">未知</string>

    <string name="created_music_list">创建的歌单(%d)</string>
    <string name="create_music_list">新建歌单</string>
    <string name="create_new_music_list">创建新歌单</string>
    <string name="music_list_manage">歌单管理</string>
    <string name="music_list_restore">恢复歌单</string>
    <string name="submit">提交</string>
    <string name="enter_musiclist_title">请输入歌单标题</string>
    <string name="set_as_private_music_list">设置为隐私歌单</string>
    <string name="collected_to_ml">已收藏到歌单</string>

    <string name="music_list_name">歌单名</string>
    <string name="music_list_music_count">%d首</string>

    <string name="item_selected_count">已选择%d项</string>
    <string name="select_all">全选</string>
    <string name="unselect_all">取消全选</string>
    <string name="add2music_list">加入歌单</string>
    <string name="please_select_music">请选择歌曲</string>

    <string name="ml_auto_download">WIFI下自动下载新增歌曲</string>
    <string name="ml_edit">编辑歌单信息</string>
    <string name="ml_sort">更改歌曲排序</string>
    <string name="ml_delete">清空下载文件</string>


    <string name="collect">收藏</string>
    <string name="comment">评论</string>
    <string name="share">分享</string>
    <string name="download">下载</string>
    <string name="digital">%d</string>
    <string name="music_list">歌单</string>
    <string name="no_music">暂无音乐</string>
    <string name="ml_empty_tip">播放或浏览音乐时，可以把音乐加入到自己的歌单。</string>

    <string name="remove_music_tip">确定将所选音乐从列表中移除吗？</string>
    <string name="delete_local_file">同时删除本地文件</string>
    <string name="no_local_music">暂无本地音乐</string>
    <string name="click2scan">一键扫描</string>
    <string name="tip_delete_ml">确定要删除此歌单吗？</string>

    <string name="one_string">%s</string>
</resources>
