<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:activity=".activity.ScanMusicActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:navigationIcon="@drawable/t_actionbar_back"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/scan_music" />

    <FrameLayout
            android:layout_width="170dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:layout_marginTop="57dp">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty_str"
                android:src="@drawable/scan_music_bg" />

        <ImageView
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/empty_str"
                android:src="@drawable/scan_music_search" />

    </FrameLayout>

    <TextView
            android:id="@+id/asm_textViewScanFull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="33dp"
            android:background="@drawable/selector_scan_music1"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="130dp"
            android:paddingTop="6dp"
            android:paddingEnd="130dp"
            android:paddingBottom="6dp"
            android:text="@string/scan_full"
            android:textColor="@color/write" />

    <TextView
            android:id="@+id/asm_textViewScanCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="19dp"
            android:background="@drawable/selector_scan_music2"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="125dp"
            android:paddingTop="6dp"
            android:paddingEnd="125dp"
            android:paddingBottom="6dp"
            android:text="@string/scan_custom"
            android:textColor="@color/selector_scan_music_tc" />
</LinearLayout>