<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

    <ImageView
            android:id="@+id/lip_imageViewPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:contentDescription="@string/empty_str"
            android:src="@drawable/list_item_play" />

    <TextView
            android:id="@+id/lip_textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:ellipsize="end"
            android:maxEms="18"
            android:maxLines="1"
            android:text="@string/deep_sea_girl"
            android:textColor="@color/lightBlack"
            android:textSize="13sp" />

    <TextView
            android:id="@+id/lip_textViewArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxEms="16"
            android:maxLines="1"
            android:text="@string/luo"
            android:textColor="@color/grey"
            android:textSize="10sp" />

    <ImageView
            android:id="@+id/lip_imageViewLocate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty_str"
            android:src="@drawable/playlist_locate" />

    <ImageView
            android:id="@+id/lip_imageViewDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/empty_str"
            android:src="@drawable/playlist_delete" />

</LinearLayout>