<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="55dp">

    <ImageView
            android:id="@+id/liml_imageView"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:background="#DEDBDE"
            android:contentDescription="@string/empty_str"
            android:scaleType="fitStart"
            android:src="@drawable/list_item_ml_def" />


    <TextView
            android:id="@+id/liml_textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@id/liml_imageView"
            android:ellipsize="marquee"
            android:maxEms="24"
            android:singleLine="true"
            android:text="@string/music_list_name"
            android:textColor="@color/lightBlack"
            android:textSize="13sp" />

    <TextView
            android:id="@+id/liml_textViewCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/liml_textViewName"
            android:layout_alignStart="@id/liml_textViewName"
            android:layout_marginBottom="10dp"
            android:ellipsize="marquee"
            android:maxEms="24"
            android:singleLine="true"
            android:text="@string/music_list_music_count"
            android:textColor="@color/grey"
            android:textSize="12sp" />


    <ImageView
            android:id="@+id/liml_imageViewOption"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/empty_str"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:src="@drawable/list_item_option" />
</RelativeLayout>